--- a/home/jamie/Desktop/My_Portfolio Website/CSS/style.css
+++ b/home/jamie/Desktop/My_Portfolio Website/CSS/style.css
@@ -71,6 +71,7 @@ body{
     height: auto;   
     text-align: center;
     font-size: 22px;
+    font-weight: bolder;
     color: #D4AF37;  
       
 }
@@ -102,7 +103,7 @@ body{
     height: auto;
     text-align: left;
     color :white;
-    font-size: 20px; 
+    font-size: 25px; 
     font-weight: bolder;
     box-sizing: border-box;
 
