--- a/home/jamie/Desktop/My_Portfolio Website/CSS/style.css
+++ b/home/jamie/Desktop/My_Portfolio Website/CSS/style.css
@@ -1,31 +1,28 @@
-body{
+body {
     background-image: url("https://images.duckduckgo.com/iu/?u=http%3A%2F%2Flegacybluetattoo.com%2Fwp-content%2Fuploads%2F2015%2F11%2Fblue-abstract-background-desktop-hd-wallpaper.png&f=1");
     opacity: 2.0;
-   
-  }
-
-.container{
-    position: relative;    
-    width: 100%;       
 }
 
-#leadPageImage{
+.container {
+    position: relative;
+    width: 100%;
+}
+
+#leadPageImage {
     border-style: solid;
-    border-width:0px;
+    border-width: 0px;
     border-bottom-color: blue;
     position: relative;
     left: 15%;
     margin-top: -5px;
     margin-bottom: 5px;
     width: 70%;
-    height: 450px; 
-   /* opacity: 0.5;*/
-    box-sizing: border-box; 
-       
+    height: 450px;
+    /* opacity: 0.5;*/
+    box-sizing: border-box;
 }
 
-.containerA{
-
+.containerA {
     border-style: solid;
     border-width: 0px;
     border-bottom-color: rgb(240, 178, 9);
@@ -34,32 +31,32 @@ body{
     transform: translate(-0%, -0%);
 }
 
-.containerA span{
+.containerA span {
     /*color: rgb(247, 232, 232);*/
     text-transform: uppercase;
     display: block;
 }
 
-.text1{
+.text1 {
     border-style: solid;
     border-width: 0px;
-    border-bottom-color:rgb(248, 242, 225);;
+    border-bottom-color: rgb(248, 242, 225);
+    ;
     position: relative;
     left: 0%;
     margin-top: 10px;
     margin-bottom: 5px;
     width: 100%;
-    height: 50px;   
+    height: 50px;
     text-align: center;
     font-size: 35px;
-    color: white;    
+    color: white;
     padding: 1px;
     letter-spacing: 4px;
     animation: text 10s 1;
-    
 }
 
-.text2{
+.text2 {
     border-style: solid;
     border-width: 3px;
     border-radius: 5px;
@@ -68,31 +65,29 @@ body{
     margin-top: 0px;
     margin-bottom: 1px;
     width: 22%;
-    height: auto;   
+    height: auto;
     text-align: center;
     font-size: 22px;
     font-weight: bolder;
-    color: #D4AF37;  
-      
+    color: #D4AF37;
 }
 
 @keyframes text {
-    0%{
+    0% {
         color: black;
         margin-bottom: -40px;
     }
-30%{
-    letter-spacing: 25px;
-    margin-bottom: -40px;
-}
-85%{
-    letter-spacing: 8px;
-    margin-bottom: -40px;
+    30% {
+        letter-spacing: 25px;
+        margin-bottom: -40px;
+    }
+    85% {
+        letter-spacing: 8px;
+        margin-bottom: -40px;
+    }
 }
 
-}
-
-#welcomeMsg{
+#welcomeMsg {
     border-style: solid;
     border-width: 0px;
     border-bottom-color: blue;
@@ -102,14 +97,13 @@ body{
     width: 34%;
     height: auto;
     text-align: left;
-    color :white;
-    font-size: 25px; 
+    color: white;
+    font-size: 25px;
     font-weight: bolder;
     box-sizing: border-box;
+}
 
-}  
-
-#free{
+#free {
     border-style: solid;
     border-width: 0px;
     border-bottom-color: blue;
@@ -124,20 +118,20 @@ body{
     border-width: 0px;
     border-bottom-color: blue;
     color: orange;
-   /* background-color: DodgerBlue;*/
+    /* background-color: DodgerBlue;*/
     position: relative;
     left: 12%;
     margin-top: 200px;
     width: 75%;
     height: 20px;
-    text-align: center; 
+    text-align: center;
     font-size: 30px;
     font-weight: bolder;
-    opacity: 1.9;   
-  }
-  
-  .flex-container > div {
-  /*  background-color: #f1f1f1;*/
+    opacity: 1.9;
+}
+
+.flex-container>div {
+    /*  background-color: #f1f1f1;*/
     width: 250px;
     margin: auto;
     margin-top: -10px;
@@ -146,129 +140,129 @@ body{
     line-height: 75px;
     font-size: 15px;
     font-weight: bolder;
-  }
+}
 
-  @keyframes btn {
-    from {background-color: orange;}
-    to {background-color: rgb(15, 30, 238);}
+@keyframes btn {
+    from {
+        background-color: orange;
+    }
+    to {
+        background-color: rgb(15, 30, 238);
+    }
+}
 
-  } 
-
-  .btn{
+.btn {
     /*width: 100px;*/
     font-size: 50px;
     color: yellow;
     font-weight: bolder;
     text-align: center;
     position: absolute;
-    left:35%;
+    left: 35%;
     margin-top: 60px;
     width: 10%;
     height: 40px;
     padding: 2px 2px;
-    background-color: darkorange;  
+    background-color: darkorange;
     animation-name: btn;
     animation-delay: 10s;
     animation-duration: 2s;
-    animation-iteration-count: infinite; 
- }
+    animation-iteration-count: infinite;
+}
 
-  #enterSiteArrow{      
-      border-style: solid;
-      border-width: 0px;
-      border-radius: 20px;
-      /*border-color: yellow;*/ 
-      position: absolute;
-      left: 35%;
-      margin-top:  15px;
-      margin-bottom: 10px;
-      width: 10%;
-      height: 40px;
-      /*background-color: yellow;*/
-  }
+#enterSiteArrow {
+    border-style: solid;
+    border-width: 0px;
+    border-radius: 20px;
+    /*border-color: yellow;*/
+    position: absolute;
+    left: 35%;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    width: 10%;
+    height: 40px;
+    /*background-color: yellow;*/
+}
 
-  a{
-      color: white;
-      font-weight: bolder;
-      font-size: 15px;
-  }
+a {
+    color: white;
+    font-weight: bolder;
+    font-size: 15px;
+}
 
-  .flex-container1 {
+.flex-container1 {
     display: flex;
     flex-direction: column;
-   /* background-color: rgb(1, 1, 14);*/
+    /* background-color: rgb(1, 1, 14);*/
     position: absolute;
     /*float: right;*/
     right: -14%;
-    margin-top: -400px;    
-    width: 20%;    
+    margin-top: -400px;
+    width: 20%;
     height: 500px;
-    text-align: center; 
+    text-align: center;
     border-style: solid;
     border-width: 0px;
-    border-color: black; 
+    border-color: black;
     padding: 1px 0px 0px 10px;
-  }  
-  
-  .flex-container1 > div {
+}
+
+.flex-container1>div {
     border-style: solid;
     border-width: 1px;
-    border-color:rgb(17, 17, 9);
+    border-color: rgb(17, 17, 9);
     border-radius: 20px;
-    background-color:rgb(1, 1, 14);
+    background-color: rgb(1, 1, 14);
     opacity: 1.0;
     width: 12%;
     height: 6%;
-    /*margin:auto 200;*/ 
-    margin-top: 5px;  
+    /*margin:auto 200;*/
+    margin-top: 5px;
     text-align: center;
     line-height: 10px;
     font-size: 15px;
-  }
+}
 
-  #shareLabel{
-      margin-top: 25px;
-      margin-bottom: 5px;
-      color: rgb(119, 119, 141);
-      background-color: black;
-      border-width: 0px;      
-      text-align: center;
-      padding: 5px 0px 5px;
-      width: 60px;
-      height: 30px;
-      margin-left: -8%;      
-     /* background-image: url("https://images.duckduckgo.com/iu/?u=http%3A%2F%2Flegacybluetattoo.com%2Fwp-content%2Fuploads%2F2015%2F11%2Fblue-abstract-background-desktop-hd-wallpaper.png&f=1");*/
-    }
+#shareLabel {
+    margin-top: 25px;
+    margin-bottom: 5px;
+    color: rgb(119, 119, 141);
+    background-color: black;
+    border-width: 0px;
+    text-align: center;
+    padding: 5px 0px 5px;
+    width: 60px;
+    height: 30px;
+    margin-left: -8%;
+    /* background-image: url("https://images.duckduckgo.com/iu/?u=http%3A%2F%2Flegacybluetattoo.com%2Fwp-content%2Fuploads%2F2015%2F11%2Fblue-abstract-background-desktop-hd-wallpaper.png&f=1");*/
+}
 
-    #facebook{
-        width: 30px;
-        height:30px;
-        border-radius: 30px;
-    }
+#facebook {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
 
-    #instagram{
-        width: 30px;
-        height: 30px;
-        border-radius: 30px;        
-    }
+#instagram {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
 
-    #twitter{
-        width: 30px;
-        height: 30px;
-        border-radius: 30px;        
-    }
+#twitter {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
 
-    #linkedIn{
-        width: 30px;
-        height: 30px;
-        border-radius: 30px;        
-    }
+#linkedIn {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
 
-    #google{
-        width: 30px;
-        height: 30px;
-        border-radius: 30px;        
-    }
-
-
-
+#google {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
