--- a/home/jamie/Desktop/My_Portfolio Website/home/style2.css
+++ b/home/jamie/Desktop/My_Portfolio Website/home/style2.css
@@ -154,6 +154,7 @@ li {
     width: 100%;
     height: 700px;
     margin: auto;
+    margin-top: -50px;
 }
 
 /*///////////////////////////////////////////////////*/
@@ -171,7 +172,11 @@ li {
 /* Hide the images by default */
 
 .mySlides {
+    
     display: none;
+    /*animation: mymove 5s;*/
+    /*animation-play-state: paused;*/
+    
 }
 
 /* Next & previous buttons */
@@ -191,6 +196,7 @@ li {
     font-size: 18px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
+    animation-delay: 100s;
 }
 
 /* Position the "next button" to the right */
@@ -207,55 +213,101 @@ li {
 .prev:hover,
 .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
-}
+ }
 
 /* Caption text */
 
 .text1 {
-    color: #f2f2f2;
-    font-size: 20px;
+    color: orangered;
+    font-size: 30px;
+    font-weight: bolder;
     padding: 8px 12px;
-    position: absolute;
+    left: 10%;
+    position: relative;
     bottom: 8px;
-    width: 100%;
+    width: 50%;
+    height: 100px;
+    margin-top: -550px;
     text-align: left;
+    line-height: 120%;
+    border-style: solid;
+    border-width: 0px;
+    border-color: rgb(243, 203, 24);   
 }
 
+#image1Text{
+    color: #D4AF37;
+    font-size: 40px;
+}
+
+#text1Span{
+    color: yellow;
+}
+
+
 .text2 {
-    color: black;
+    color: blue;
     font-size: 20px;
+    font-weight: bolder;
     padding: 8px 12px;
-    position: absolute;
+    position: relative;
     bottom: 8px;
+    width: 50%;
+    height: 100px;
+    margin-top: -500px;
+    text-align: left;
+    line-height: 130%;
     width: 100%;
     text-align: left;
+    border-style: solid;
+    border-width: 0px;
+    border-color: rgb(243, 203, 24);  
+}
+
+#image2Text{
+    color: orangered;
+    font-size: 35px;
 }
 
 .text3 {
-    color: black;
-    font-size: 20px;
+    color: orangered;
+    font-size: 35px;
+    font-weight: bolder;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
     width: 100%;
-    text-align: left;
+    text-align: center;
+    margin-top: -600px;
+    position: relative;
+    line-height: 100%;
 }
 
 .text4 {
-    color: #f2f2f2;
-    font-size: 20px;
+    color: orangered;
+    font-size: 35px;
+    font-weight: bolder;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
     width: 100%;
-    text-align: left;
+    text-align: center;
+    margin-top: -100px;
+    position: relative;
+    line-height: 100%;
+}
+
+#text4Span{
+    color: yellow;
 }
 
 .text5 {
-    color: #f2f2f2;
-    font-size: 20px;
+    color: orangered;
+    font-size: 35px;
+    font-weight: bolder;
     padding: 8px 12px;
-    position: absolute;
+    position: relative;
+    margin-top: -400px;
     bottom: 8px;
     width: 100%;
     text-align: center;
@@ -284,18 +336,20 @@ li {
     transition: background-color 0.1s ease;
 }
 
-/*.active,
+.active,
   .dot:hover {
-    background-color: #717171;
-  }*/
+    background-color: rgb(4, 1, 22);
+  }
 
 /* Fading animation */
 
 .fade {
+    
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 50.5s;
+    -webkit-animation-duration: 0.5s;
     animation-name: fade;
-    animation-duration: 100.9s;
+    animation-duration: 100.0s;
+    
 }
 
 @-webkit-keyframes fade {
@@ -656,19 +710,27 @@ h1 {
     height: 270px;
     margin-top: 30px;
     text-align: center;
+    color: black;
+    line-height: 100%;
+    font-style: oblique;
+    
 }
 
 #headingWIb {
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: bolder;
+    font-style: initial;
+    text-decoration: underline;
     border-style: solid;
-    border-width: 1px;
-    border-color: rgb(15, 3, 68);
+    border-width: 0px;
+    border-color: black;
     padding: 0px 0px 20px;
     margin-top: 2px;
     position: absolute;
     width: 50%;
     height: 100px;
     left: 50%;
+    color: black;
 }
 
 #webImageion2 {
