--- a/style2.css
+++ b/style2.css
@@ -217,13 +217,16 @@ body {
   /* Caption text */
   
   .text1 {
-    color: #f2f2f2;
-    font-size: 20px;
+    color: #eb0505;
+    font-size: 100px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
     width: 100%;
     text-align: left;
+    border-style: solid;
+    border-width: 5px;
+    border-color: rgb(243, 237, 237);
     }
   
   .text2 {
