--- a/home/jamie/Desktop/My_Portfolio Website/home/style2.css
+++ b/home/jamie/Desktop/My_Portfolio Website/home/style2.css
@@ -140,6 +140,7 @@ li {
     height: 900px;
     border-style: solid;
     border-width: 0.5px;
+    border-bottom-width: 0px;
     border-color: rgba(179, 179, 209, 0.945);
     margin-bottom: 35px;
     margin-top: -1%;
@@ -155,6 +156,7 @@ li {
     height: 700px;
     margin: auto;
     margin-top: -50px;
+    opacity: 1.0;
 }
 
 /*///////////////////////////////////////////////////*/
@@ -166,7 +168,7 @@ li {
     height: 100px;
     position: relative;
     margin: auto;
-    margin-top: 0%;
+    margin-top: 3%;
 }
 
 /* Hide the images by default */
@@ -194,7 +196,7 @@ li {
     color: rgb(10, 5, 5);
     font-weight: bold;
     font-size: 18px;
-    transition: 0.6s ease;
+    transition: 1.0s ease;
     border-radius: 0 3px 3px 0;
     animation-delay: 100s;
 }
@@ -221,6 +223,7 @@ li {
     color: orangered;
     font-size: 30px;
     font-weight: bolder;
+    
     padding: 8px 12px;
     left: 10%;
     position: relative;
@@ -237,7 +240,22 @@ li {
 
 #image1Text{
     color: #D4AF37;
-    font-size: 40px;
+    font-size: 50px;
+    text-shadow: 5px 5px 20px rgb(241, 185, 3);
+    letter-spacing: 25px;
+    animation: type 3s steps(7);
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+@keyframes type {
+    0% {
+        width: 0ch;
+    }
+    100% {
+        width: 7ch;
+    }
+
 }
 
 #text1Span{
@@ -292,7 +310,7 @@ li {
     bottom: 8px;
     width: 100%;
     text-align: center;
-    margin-top: -100px;
+    margin-top: -500px;
     position: relative;
     line-height: 100%;
 }
@@ -399,6 +417,7 @@ li {
     border: none;
     cursor: pointer;
     border-radius: 5px;
+
     text-align: center;
 }
 
@@ -600,6 +619,7 @@ strong {
 .container2 {
     border-style: solid;
     border-width: 0.5px;
+    border-bottom-width: 0px;
     border-color: rgba(179, 179, 209, 0.945);
     width: auto;
     height: 1100px;
@@ -699,6 +719,31 @@ h1 {
     border-width: 0.5px;
     border-color: rgb(4, 1, 15);
     border-top-width: 0px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bolder;
+    font-style: initial;
+    /*text-decoration: underline;*/
+    color: black;
+}
+
+#webAppText{
+    text-align: center;
+    color: black;
+    line-height: 100%;
+    font-style: oblique;
+    font-size: 15px;
+    font-weight: 200;
+    margin-top: 480px;
+    border-style: solid;
+    border-width: 0px;
+    border-color: rgb(4, 1, 15);
+}
+
+#simWebApp{
+    color: rgb(7, 7, 66);
+    font-size: 16px;
+    font-weight: bolder;
 }
 
 #webImages {
@@ -711,7 +756,7 @@ h1 {
     margin-top: 30px;
     text-align: center;
     color: black;
-    line-height: 100%;
+    line-height: 120%;
     font-style: oblique;
     
 }
@@ -779,6 +824,7 @@ h1 {
 .container3 {
     border-style: solid;
     border-width: 0.5px;
+    border-bottom-width: 0px;
     border-color: rgba(179, 179, 209, 0.945);
     width: 100%;
     height: 1150px;
@@ -891,6 +937,7 @@ h2 {
     border-style: solid;
     border-width: 0px;
     border-color: rgba(179, 179, 209, 0.945);
+    border-bottom-width: 0px;
     padding: 1px 0px 0px 0px;
     margin-bottom: 200px;
 }
@@ -916,6 +963,7 @@ h3 {
     text-align: center;
     border-style: solid;
     border-width: 0px;
+    border-bottom-width: 0px;
     border-color: rgb(5, 80, 24);
     color: rgba(99, 99, 143, 0.945);
     width: 100%;
@@ -1004,14 +1052,26 @@ p2 {
 }
 
 #testimonials {
-    width: auto;
+    width: 80%;
     height: 50px;
-    position: relative
+    position: relative;
+    font-style: italic;
+    font-size: 20px;
+    line-height: 20px;
+    
+ /*   padding: 0px 50px 0px 0px;
+    left: 5%;
+    text-align: left;
+    border-style: solid;
+    border-width: 0.5px;
+    border-bottom-width: 0px;
+    border-color: rgba(179, 179, 209, 0.945);*/
 }
 
 .container4 {
     border-style: solid;
     border-width: 0.5px;
+    border-bottom-width: 0px;
     border-color: rgba(179, 179, 209, 0.945);
     width: auto;
     height: 1200px;
@@ -1041,6 +1101,7 @@ h4 {
 .container5 {
     border-style: solid;
     border-width: 0.5px;
+    border-bottom-width: 0px;
     border-color: rgba(179, 179, 209, 0.945);
     width: auto;
     height: 1710px;
@@ -1106,7 +1167,7 @@ h5 {
 .flex-container6 {
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(240, 8, 8);*/
+    /*background-color: rgb(240, 8, 8);*/
     position: absolute;
     float: right;
     /*margin-left: 50px;*/
@@ -1139,14 +1200,14 @@ h5 {
 #webImage2 {
     height: 445px;
     border-style: solid;
-    border-width: 20px;
+    border-width: 12px;
     border-color: rgb(13, 1, 15);
 }
 
 #webImage3 {
     height: 445px;
     border-style: solid;
-    border-width: 20px;
+    border-width: 12px;
     border-color: rgb(13, 1, 15);
 }
 
@@ -1158,6 +1219,8 @@ h5 {
     border-color: rgb(238, 195, 5);
     margin-top: 0px;
     text-align: center;
+    color: rgb(14, 14, 2);
+    background-color: rgb(248, 242, 225);
 }
 
 #headingWP {
@@ -1165,20 +1228,27 @@ h5 {
     margin-top: -20px;
     left: 25%;
     border-style: solid;
-    border-width: 2px;
+    border-width: 0px;
     border-color: rgb(193, 7, 226);
     width: 50%;
     height: 100px;
     padding: 25px 0px 20px;
     position: absolute;
+    color: rgb(5, 5, 133);
+    font-weight: bolder;
 }
 
 #webDescrip {
     height: 150px;
     border-style: solid;
-    border-width: 20px;
+    border-width: 15px;
     border-color: rgb(13, 1, 15);
     margin-top: 0px;
+    font-size: 15px;
+    line-height: normal;
+    font-style: oblique;
+    /*ont-weight: 550;*/
+    color: rgb(22, 3, 3);
 }
 
 #image10 {
@@ -1404,8 +1474,8 @@ h6 {
     height: 90px;
     text-align: center;
     border-style: solid;
-    border-width: 1.5px;
-    border-color: rgb(214, 208, 208);
+    border-width: 0.5px;
+    border-color: white;
     padding: 0px 150px 0px 0px;
 }
 
